# mono-vo

./: .gitignore  CMakeLists.txt
src/: visodo.cpp
